--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,5 +1,5 @@
 
-active.users.title = aktualnie zalogowani użytkownicy
+active.users.title = Aktualnie zalogowani użytkownicy
 
 administration.backup.executeBackupButton                                = Stwórz kopię zapasową
 administration.backup.title                                              = Kopia zapasowa bazy danych
@@ -52,7 +52,7 @@ administration.runtime.configuration.timeZone                            = Stref
 administration.testResultsAllUsers                                       = Stwórz przykładowe wyniki dla wszystkich użytkowników
 administration.title                                                     = Administracja
 
-all.matches = All Matches
+all.matches = Wszystkie mecze
 
 app.dateformat            = EEE dd MMMM yyyy HH:mm
 app.dateformatWithSeconds = EEE dd MMMM yyyy HH:mm:ss
@@ -311,19 +311,19 @@ excel.upload.msg.noExcelFile          = Wgrany plik nie jest plikiem Excel (.xls
 excel.upload.msg.noFileGiven          = Wybierz plik Excel do wgrania
 excel.upload.msg.saved                = Plik Excel został pomyślnie zaimportowany!
 
-extra_bets.finalWinner      = mistrz
+extra_bets.finalWinner      = Mistrz
 extra_bets.points           = {0} punktów
 extra_bets.reachablePoints  = możliwych punktów
 extra_bets.reachedPoints    = zdobytych punktów
-extra_bets.semiFinalWinner  = wicemistrz
-extra_bets.thirdFinalWinner = trzecie miejsce
-extra_bets.title            = typowanie mistrza i wicemistrza
+extra_bets.semiFinalWinner  = Wicemistrz
+extra_bets.thirdFinalWinner = Trzecie miejsce
+extra_bets.title            = Typowanie mistrza i wicemistrza
 
 extrabet.bets.of.others = ... typowania innych
 
 finals = Mecz Finałowy
 
-group = Grupy
+group = Grupa
 
 group.entry.FINAL            = Finał
 group.entry.GAME_FOR_THIRD   = Mecz o trzecie miejsce
@@ -337,7 +337,7 @@ group.entry.GROUP_G          = Grupa G
 group.entry.GROUP_H          = Grupa H
 group.entry.GROUP_I          = Grupa I
 group.entry.QUARTER_FINAL    = Ćwierćfinał
-group.entry.ROUND_OF_SIXTEEN = 1/16 finału
+group.entry.ROUND_OF_SIXTEEN = 1/8 finału
 group.entry.SEMI_FINAL       = Półfinał
 group.title.A                = Grupa A
 group.title.B                = Grupa B
@@ -480,7 +480,7 @@ prices.title = Nagrody
 ranking.list.title = Ranking
 ranking.noRankings = Brak przypisanych typowań
 
-rules.title = Rules
+rules.title = Zasady
 
 statistics.legend.bonusPoints      = Bonusowe punkty
 statistics.legend.favouriteCountry = Ulubiony kraj
