--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -197,7 +197,7 @@ country.lux           = Luxemburg
 country.lva           = Lettland
 country.mac           = Macau
 country.mad           = Madagaskar
-country.mar           = Morokko
+country.mar           = Marokko
 country.mas           = Malaysia
 country.mda           = Moldawien
 country.mdv           = Malediven
