--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -109,7 +109,7 @@ country.blr           = Wei\u00DFrussland
 country.blz           = Belize
 country.bol           = Bolivien
 country.bot           = Botswana
-country.bra           = Brazilien
+country.bra           = Brasilien
 country.brb           = Barbados
 country.bru           = Brunei Darussalam
 country.bul           = Bulgarien
