added joker column in excel export

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -298,11 +298,14 @@ excel.download.hint.allMatchesDeleted = Achtung! Alle vorhandenen Spiele werden 
 excel.download.template               = Excel-Vorlage
 excel.download.template.name          = Vorlagen
 excel.export.date                     = Datum
+excel.export.joker                    = Joker
+excel.export.no                       = nein
 excel.export.points                   = Punkte
 excel.export.pointsCount              = H\u00E4ufigkeit Punktezahl
 excel.export.team1                    = Team 1
 excel.export.team2                    = Team 2
 excel.export.username                 = Benutzername
+excel.export.yes                      = ja
 excel.import.title                    = Excel-Datei mit Spielen importieren
 excel.upload.button                   = Datei hochladen
 excel.upload.file                     = Excel-Datei hochladen
