--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -298,11 +298,14 @@ excel.download.hint.allMatchesDeleted = Caution! All existing matches will be de
 excel.download.template               = Excel Template
 excel.download.template.name          = Templates
 excel.export.date                     = Date
+excel.export.joker                    = Joker
+excel.export.no                       = no
 excel.export.points                   = Points
 excel.export.pointsCount              = Reached points count
 excel.export.team1                    = Team One
 excel.export.team2                    = Team Two
 excel.export.username                 = User Name
+excel.export.yes                      = yes
 excel.import.title                    = Import matches via Excel
 excel.upload.button                   = Upload file
 excel.upload.file                     = Upload Excel file
