extend excel export

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -297,6 +297,8 @@ error.title               = Fehler
 excel.download.hint.allMatchesDeleted = Achtung! Alle vorhandenen Spiele werden gel\u00F6scht!
 excel.download.template               = Excel-Vorlage
 excel.download.template.name          = Vorlagen
+excel.export.bet1                     = Tip Team 1
+excel.export.bet2                     = Tip Team 2
 excel.export.date                     = Datum
 excel.export.joker                    = Joker
 excel.export.no                       = nein
