--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -297,6 +297,8 @@ error.title               = Error
 excel.download.hint.allMatchesDeleted = Caution! All existing matches will be deleted!
 excel.download.template               = Excel Template
 excel.download.template.name          = Templates
+excel.export.bet1                     = Bet Team 1
+excel.export.bet2                     = Bet Team 2
 excel.export.date                     = Date
 excel.export.joker                    = Joker
 excel.export.no                       = no
