--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -281,23 +281,30 @@ country.wales         = Walia
 country.yem           = Yemen
 country.zam           = Zambia
 
-excel.download.template      = Excel Template
-excel.download.template.name = Templates
-excel.export.date            = Data
-excel.export.joker           = Joker
-excel.export.no              = nie
-excel.export.points          = Punkty
-excel.export.pointsCount     = Ranking uzyskanych punkt\u00C3\u00B3w
-excel.export.team1           = Zesp\u00C3\u00B3\u00C5\u0082 pierwszy
-excel.export.team2           = Zesp\u00C3\u00B3\u00C5\u0082 drugi
-excel.export.username        = Nazwa u\u00C5\u00BCytkownika
-excel.export.yes             = tak
-excel.import.title           = Importuj mecze z Excela
-excel.upload.button          = Wgraj plik
-excel.upload.file            = Wgraj plik Excel
-excel.upload.msg.noExcelFile = Wgrany plik nie jest plikiem Excel (.xlsx)!
-excel.upload.msg.noFileGiven = Wybierz plik Excel do wgrania
-excel.upload.msg.saved       = Plik Excel zosta\u00C5\u0082 pomy\u00C5\u009Blnie zaimportowany!
+error.msg.unexpectedError = Wyst\u0105pi\u0142 nieoczekiwany b\u0142\u0105d!
+error.title               = B\u0142\u0105d
+
+excel.download.hint.allMatchesDeleted = Uwaga! Wszystkie istniej\u0105ce mecze zostan\u0105 usuni\u0119te!
+excel.download.template               = Excel Template
+excel.download.template.name          = Templates
+excel.export.bet1                     = Zak\u0142ad Zesp\u00F3\u0142 1
+excel.export.bet2                     = Zak\u0142ad Zesp\u00F3\u0142 2
+excel.export.date                     = Data
+excel.export.joker                    = Joker
+excel.export.no                       = nie
+excel.export.points                   = Punkty
+excel.export.pointsCount              = Ranking uzyskanych punkt\u00C3\u00B3w
+excel.export.team1                    = Zesp\u00C3\u00B3\u00C5\u0082 pierwszy
+excel.export.team2                    = Zesp\u00C3\u00B3\u00C5\u0082 drugi
+excel.export.username                 = Nazwa u\u00C5\u00BCytkownika
+excel.export.yes                      = tak
+excel.import.title                    = Importuj mecze z Excela
+excel.upload.button                   = Wgraj plik
+excel.upload.file                     = Wgraj plik Excel
+excel.upload.msg.failed               = Wyst\u0105pi\u0142 b\u0142\u0105d podczas importowania pliku excel. Przyczyna: {0}
+excel.upload.msg.noExcelFile          = Wgrany plik nie jest plikiem Excel (.xlsx)!
+excel.upload.msg.noFileGiven          = Wybierz plik Excel do wgrania
+excel.upload.msg.saved                = Plik Excel zosta\u00C5\u0082 pomy\u00C5\u009Blnie zaimportowany!
 
 extra_bets.finalWinner      = Mistrz
 extra_bets.points           = {0} punkt\u00C3\u00B3w
