bugfix excel export; added result in excel

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -300,10 +300,13 @@ excel.download.template.name          = Vorlagen
 excel.export.bet1                     = Tip Team 1
 excel.export.bet2                     = Tip Team 2
 excel.export.date                     = Datum
+excel.export.hint                     = Export aller Ergebnisse nach Excel. Nach Abschluss des Finales werden auch die Tipps mit angegeben.
 excel.export.joker                    = Joker
 excel.export.no                       = nein
 excel.export.points                   = Punkte
 excel.export.pointsCount              = H\u00E4ufigkeit Punktezahl
+excel.export.resultTeam1              = Ergebnis Team 1
+excel.export.resultTeam2              = Ergebnis Team 2
 excel.export.team1                    = Team 1
 excel.export.team2                    = Team 2
 excel.export.username                 = Benutzername
