--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -300,10 +300,13 @@ excel.download.template.name          = Templates
 excel.export.bet1                     = Bet Team 1
 excel.export.bet2                     = Bet Team 2
 excel.export.date                     = Date
+excel.export.hint                     = Export of all results to Excel. After the final match all bets are included.
 excel.export.joker                    = Joker
 excel.export.no                       = no
 excel.export.points                   = Points
 excel.export.pointsCount              = Reached points count
+excel.export.resultTeam1              = Result Team 1
+excel.export.resultTeam2              = Result Team 2
 excel.export.team1                    = Team One
 excel.export.team2                    = Team Two
 excel.export.username                 = User Name
