--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -290,10 +290,13 @@ excel.download.template.name          = Templates
 excel.export.bet1                     = Zak\u0142ad Zesp\u00F3\u0142 1
 excel.export.bet2                     = Zak\u0142ad Zesp\u00F3\u0142 2
 excel.export.date                     = Data
+excel.export.hint                     = Eksport wszystkich wynik\u00F3w do programu Excel. Po ostatnim meczu wszystkie zak\u0142ady s\u0105 uwzgl\u0119dnione.
 excel.export.joker                    = Joker
 excel.export.no                       = nie
 excel.export.points                   = Punkty
 excel.export.pointsCount              = Ranking uzyskanych punkt\u00C3\u00B3w
+excel.export.resultTeam1              = Wynik Dru\u017Cyna 1
+excel.export.resultTeam2              = Wynik Dru\u017Cyna 2
 excel.export.team1                    = Zesp\u00C3\u00B3\u00C5\u0082 pierwszy
 excel.export.team2                    = Zesp\u00C3\u00B3\u00C5\u0082 drugi
 excel.export.username                 = Nazwa u\u00C5\u00BCytkownika
