--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -3,7 +3,7 @@ javax.validation.constraints.NotNull.message = must not be empty
 
 msg.bet.betting.error.passwordMismatch      = The new password differs from password repeat!
 msg.input.countries.and.teamNames           = Only country or team names allowed!
-msg.input.same.teams                        = Ein Team kann nicht gegen sich selbst spielen!
+msg.input.same.teams                        = A team cannot play against itself!
 msg.input.teamOne.teamTwo                   = Please select a name for team one and team two!
 msg.invalidTeamResult                       = You entered result is invalid!
 msg.passwordChange.oldAndNewPasswordAreSame = The new password must not be your old one!
