--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,8 +1,12 @@
 
 active.users.title = Aktualnie zalogowani u\u00C5\u00BCytkownicy
 
+administration.backup.executeBackupButton                                = Stworzy\u0107 kopi\u0119 zapasow\u0105
 administration.backup.title                                              = Kopia zapasowa bazy danych
+administration.backup.warning.hint                                       = Obs\u0142ugiwane s\u0105 tylko bazy danych oparte na plikach H2!
+administration.cache.title                                               = Wyczy\u015B\u0107 pami\u0119\u0107 podr\u0119czn\u0105
 administration.change.loglevel.title                                     = Zmie\u00C5\u0084 poziom logowania
+administration.clearCache                                                = Wyczy\u015B\u0107 pami\u0119\u0107 podr\u0119czn\u0105
 administration.config.title                                              = Konfiguracja
 administration.createEmMatches                                           = create matches of EM 2016
 administration.createRandomMatches                                       = Wygeneruj losowe mecze
@@ -11,6 +15,8 @@ administration.demoBetsAllUsers                                          = Wygen
 administration.excel.export.allBets                                      = Wszystkie typowania
 administration.excel.export.pointsCount                                  = Liczba zdobytych punkt\u00C3\u00B3w
 administration.excel.export.title                                        = Export do Excela
+administration.msg.backup.error.noInMemory                               = Bazy danych w pami\u0119ci nie s\u0105 obs\u0142ugiwane! U\u017Cyj bazy danych opartej na H2!
+administration.msg.backup.error.unknown                                  = Wyst\u0105pi\u0142 nieznany b\u0142\u0105d podczas tworzenia kopii zapasowej bazy danych: {0}
 administration.msg.backup.error.unsupportedDatabase                      = Kopia zapasowa bazy danych jest wspierana tylko dla bazy H2!
 administration.msg.info.allBetsAndMatchesDeleted                         = Wszystkie typowania oraz mecze zosta\u00C5\u0082y skasowane!
 administration.msg.info.cacheCleared                                     = Pami\u00C4\u0099\u00C4\u0087 podr\u00C4\u0099czna zosta\u00C5\u0082a wyczyszczona!
@@ -24,9 +30,12 @@ administration.msg.info.randomMatchesCreated                             = Testo
 administration.msg.info.runtimeConfigSaved                               = Zapisano konfiguracje.
 administration.runtime.configuration                                     = Runtime Configuration Settings
 administration.runtime.configuration.changePasswordOnFirstLogin          = Zmie\u00C5\u0084 has\u00C5\u0082o podczas pierwszego logowania
+administration.runtime.configuration.changePasswordOnFirstLogin.tooltip  = U\u017Cytkownicy musz\u0105 zmieni\u0107 has\u0142o przy pierwszej pr\u00F3bie logowania.
 administration.runtime.configuration.createDemoData                      = Wygeneruj przyk\u00C5\u0082adowe dane podczas startu
 administration.runtime.configuration.createDemoData.tooltip              = Wygeneruj automatycznie przyk\u00C5\u0082adowe dane podczas startu systemu
 administration.runtime.configuration.currentTime                         = Aktualny czas
+administration.runtime.configuration.enableChangingUsername              = Nazwa u\u017Cytkownika jest zmienna
+administration.runtime.configuration.enableChangingUsername.tooltip      = U\u017Cytkownicy mog\u0105 zmienia\u0107 swoj\u0105 nazw\u0119 u\u017Cytkownika
 administration.runtime.configuration.enabledParentChildRanking           = Osobne rankingi
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = Osobne rankingi dla rodzic\u00C3\u00B3w i dzieci
 administration.runtime.configuration.extraBetPoints                      = Punkty za bonusowe zak\u00C5\u0082ady
@@ -62,6 +71,7 @@ bet.others.title         = Typowania innych
 
 betting.joker           = U\u00C5\u00BCyj Jokera
 betting.joker.available = Wykorzysta\u00C5\u0082e\u00C5\u009B {0} z {1} joker\u00C3\u00B3w.
+betting.joker.tooltip   = Mo\u017Cesz podwoi\u0107 swoje punkty wynikowe, u\u017Cywaj\u0105c jokera.
 
 button.back              = Powr\u00C3\u00B3t
 button.backToImageUpload = Powr\u00C3\u00B3t do wgrywania obrazka
@@ -351,35 +361,37 @@ group.title.quarterFinal     = \u00C4\u0086wier\u00C4\u0087fina\u00C5\u0082
 group.title.roundOfSixteen   = 1/8 fina\u00C5\u0082u
 group.title.semiFinal        = P\u00C3\u00B3\u00C5\u0082fina\u00C5\u0082
 
-image.gallery.downloadAll            = Pobierz wszystkie obrazy
-image.gallery.msg.delete.perm.denied = Mo\u00C5\u00BCesz kasowa\u00C4\u0087 tylko w\u00C5\u0082asne obrazy
-image.gallery.msg.deleted            = Obraz zosta\u00C5\u0082 skasowany
-image.gallery.msg.noImages           = Brak zapisanych obraz\u00C3\u00B3w
-image.gallery.title                  = Galeria obraz\u00C3\u00B3w
-image.gallery.toUploadImagePage      = Dodaj wi\u00C4\u0099cej obraz\u00C3\u00B3w
-image.group.button.delete            = Skasuj grup\u00C4\u0099
-image.group.id                       = Identyfikator grupy
-image.group.msg.added                = Dodano grup\u00C4\u0099 "{0}"!
-image.group.msg.deleted              = Grupa zosta\u00C5\u0082a skasowana!
-image.group.msg.groupExist           = Grupa o nazwie "{0}" ju\u00C5\u00BC istnieje!
-image.group.msg.updated              = Grupa "{0}" zosta\u00C5\u0082a zaktualizowana!
-image.group.name                     = Nazwa grupy
-image.group.title                    = Obrazki gruyp
-image.upload.button                  = Wgraj obraz
-image.upload.deleteImage             = Skasuj obraz
-image.upload.description             = Opis
-image.upload.editGroup               = Edytuj grup\u00C4\u0099
-image.upload.file                    = plik
-image.upload.groupName               = groupa
-image.upload.id                      = ID obrazu
-image.upload.msg.editGroup           = edytuj grup\u00C4\u0099
-image.upload.msg.failed              = Wgrywanie obrazu si\u00C4\u0099 nie powiod\u00C5\u0082o!
-image.upload.msg.noFileGiven         = Prosz\u00C4\u0099 wybra\u00C4\u0087 plik!
-image.upload.msg.saved               = Obraz zosta\u00C5\u0082 zapisany!
-image.upload.rotate                  = obr\u00C3\u00B3w
-image.upload.thumbnail               = thumbnail
-image.upload.title                   = Wgraj obraz
-image.upload.toImageGallery          = Przejd\u00C5\u00BA do galerii
+image.gallery.downloadAll             = Pobierz wszystkie obrazy
+image.gallery.msg.delete.perm.denied  = Mo\u00C5\u00BCesz kasowa\u00C4\u0087 tylko w\u00C5\u0082asne obrazy
+image.gallery.msg.deleted             = Obraz zosta\u00C5\u0082 skasowany
+image.gallery.msg.noImages            = Brak zapisanych obraz\u00C3\u00B3w
+image.gallery.title                   = Galeria obraz\u00C3\u00B3w
+image.gallery.toUploadImagePage       = Dodaj wi\u00C4\u0099cej obraz\u00C3\u00B3w
+image.group.button.delete             = Skasuj grup\u00C4\u0099
+image.group.id                        = Identyfikator grupy
+image.group.msg.added                 = Dodano grup\u00C4\u0099 "{0}"!
+image.group.msg.deleted               = Grupa zosta\u00C5\u0082a skasowana!
+image.group.msg.deletionHasReferences = S\u0105 ju\u017C zdj\u0119cia przypisane do tej grupy! Najpierw usu\u0144 te obrazy!
+image.group.msg.groupExist            = Grupa o nazwie "{0}" ju\u00C5\u00BC istnieje!
+image.group.msg.updated               = Grupa "{0}" zosta\u00C5\u0082a zaktualizowana!
+image.group.name                      = Nazwa grupy
+image.group.title                     = Obrazki gruyp
+image.upload.button                   = Wgraj obraz
+image.upload.deleteImage              = Skasuj obraz
+image.upload.description              = Opis
+image.upload.editGroup                = Edytuj grup\u00C4\u0099
+image.upload.file                     = plik
+image.upload.groupName                = groupa
+image.upload.id                       = ID obrazu
+image.upload.msg.editGroup            = edytuj grup\u00C4\u0099
+image.upload.msg.failed               = Wgrywanie obrazu si\u00C4\u0099 nie powiod\u00C5\u0082o!
+image.upload.msg.noFileGiven          = Prosz\u00C4\u0099 wybra\u00C4\u0087 plik!
+image.upload.msg.noJpegImage          = Dozwolony jest tylko plik JPEG typu!
+image.upload.msg.saved                = Obraz zosta\u00C5\u0082 zapisany!
+image.upload.rotate                   = obr\u00C3\u00B3w
+image.upload.thumbnail                = thumbnail
+image.upload.title                    = Wgraj obraz
+image.upload.toImageGallery           = Przejd\u00C5\u00BA do galerii
 
 info.edit.title         = Edytuj informacje
 info.misc.edit.button   = Edytuj r\u00C3\u00B3\u00C5\u00BCno\u00C5\u009Bci
@@ -423,16 +435,21 @@ matchresult.heading = Wprowad\u00C5\u00BA wynik
 misc.title = R\u00C3\u00B3\u00C5\u00BCno\u00C5\u009Bci
 
 msg.ROLE_ADMIN                         = Admin
+msg.ROLE_SUB_ADMIN                     = standardowy u\u017Cytkownik wprowadzaj\u0105cy wyniki, adm adm.
 msg.ROLE_USER                          = standardowy u\u00C5\u00BCytkownik
+msg.ROLE_USER_ENTER_RESULTS            = standardowy u\u017Cytkownik z wprowadzaniem wynik\u00F3w
 msg.bet.betting.created                = Typowanie zapisane!
+msg.bet.betting.error.matchInProgress  = Mecz ju\u017C si\u0119 rozpocz\u0105\u0142! \u017Badne zak\u0142ady nie s\u0105 mo\u017Cliwe!
 msg.bet.betting.error.oldPasswordWrong = Stare has\u00C5\u0082o jest niepoprawne!
 msg.bet.betting.info.allBetted         = Wszystkie mecze wytypowane!
+msg.bet.betting.warn.extraBetOpen      = Twoje zak\u0142ady bonusowe s\u0105 nadal w toku!
 msg.input.complete.date.time           = Wprowad\u00C5\u00BA dat\u00C4\u0099 i czas!
 msg.input.complete.result              = Wprowad\u00C5\u00BA ca\u00C5\u0082y wynik!
 msg.match.created                      = Mecz {0} vs. {1} stworzony!
 msg.match.deleted                      = Mecz {0} vs. {1} skasowany!
 msg.match.notFound                     = Nie mo\u00C5\u00BCna znale\u00C5\u00BA\u00C4\u0087 meczu o ID {0}!
 msg.match.updated                      = Mecz {0} vs. {1} zaktualizowany!
+msg.negative.values.not.allowed        = Warto\u015Bci ujemne s\u0105 niedozwolone!
 msg.user.profile.info.passwordChanged  = Zmieniono has\u00C5\u0082o
 msg.user.profile.info.usernameChanged  = Zmieniono nazw\u00C4\u0099 u\u00C5\u00BCytkownika
 msg.warn.no.statistics                 = Brak statystyk
@@ -481,6 +498,8 @@ statistics.title                   = Statystyki punkt\u00C3\u00B3w
 
 systeminfo.title = System Info
 
+upcoming.matches = Nadchodz\u0105ce mecze
+
 user.changePassword.firstLogin               = To Twoje pierwsze logowanie, prosz\u00C4\u0099 zmie\u00C5\u0084 has\u00C5\u0082o
 user.create.child                            = Dziecko
 user.create.password                         = has\u00C5\u0082o
@@ -493,6 +512,7 @@ user.deleted.couldNotDeleteOwnUser           = Nie mo\u00C5\u00BCesz skasowa\u00
 user.edit.title                              = Edytuj u\u00C5\u00BCytkownika
 user.edit.tooltip.ROLE_ADMIN                 = Administrator ma wszystkie uprawnienia
 user.edit.tooltip.ROLE_SUB_ADMIN             = U\u00C5\u00BCytkownik mo\u00C5\u00BCe obstawia\u00C4\u0087 mecze, wprowadza\u00C4\u0087 wyniki oraz dodawa\u00C4\u0087 nowych u\u00C5\u00BCytkownik\u00C3\u00B3w.
+user.edit.tooltip.ROLE_USER                  = Jest to domy\u015Blna rola dla wi\u0119kszo\u015Bci u\u017Cytkownik\u00F3w, kt\u00F3rzy licytuj\u0105 tylko mecze.
 user.edit.tooltip.ROLE_USER_ENTER_RESULTS    = U\u00C5\u00BCytkownik mo\u00C5\u00BCe obstawia\u00C4\u0087 mecze oraz wprowadza\u00C4\u0087 wyniki tych meczy.
 user.edit.username                           = nazwa u\u00C5\u00BCytkownika
 user.edited                                  = U\u00C5\u00BCytkownik {0} zosta\u00C5\u0082 zaktualizowany!
