export extra bets to excel

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,6 +13,7 @@ administration.createRandomMatches                                       = creat
 administration.deleteAllBetsAndMatches                                   = Delete all bets and matches
 administration.demoBetsAllUsers                                          = create demo bets for all users
 administration.excel.export.allBets                                      = All Bets
+administration.excel.export.extraBets                                    = All extra bets
 administration.excel.export.pointsCount                                  = Number of reached points count
 administration.excel.export.title                                        = Excel Export
 administration.msg.backup.error.noInMemory                               = In-Memory databases not supported! Please use a H2 file based database!
@@ -294,30 +295,37 @@ country.zam           = Zambia
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
 
-excel.download.hint.allMatchesDeleted = Caution! All existing matches will be deleted!
-excel.download.template               = Excel Template
-excel.download.template.name          = Templates
-excel.export.bet1                     = Bet Team 1
-excel.export.bet2                     = Bet Team 2
-excel.export.date                     = Date
-excel.export.hint                     = Export of all results to Excel. After the final match all bets are included.
-excel.export.joker                    = Joker
-excel.export.no                       = no
-excel.export.points                   = Points
-excel.export.pointsCount              = Reached points count
-excel.export.resultTeam1              = Result Team 1
-excel.export.resultTeam2              = Result Team 2
-excel.export.team1                    = Team One
-excel.export.team2                    = Team Two
-excel.export.username                 = User Name
-excel.export.yes                      = yes
-excel.import.title                    = Import matches via Excel
-excel.upload.button                   = Upload file
-excel.upload.file                     = Upload Excel file
-excel.upload.msg.failed               = An error occured while importing the excel file. Cause: {0}
-excel.upload.msg.noExcelFile          = The uploaded file is not an excel file (.xlsx)!
-excel.upload.msg.noFileGiven          = Please choose excel file to upload!
-excel.upload.msg.saved                = The Excel file was imported successfully!
+excel.download.hint.allMatchesDeleted  = Caution! All existing matches will be deleted!
+excel.download.template                = Excel Template
+excel.download.template.name           = Templates
+excel.export.bet1                      = Bet Team 1
+excel.export.bet2                      = Bet Team 2
+excel.export.date                      = Date
+excel.export.extrabet.finalWinner      = champion
+excel.export.extrabet.pointsOne        = Points champion
+excel.export.extrabet.pointsThree      = Points 3rd Winner
+excel.export.extrabet.pointsTwo        = Points vice champion
+excel.export.extrabet.semiFinalWinner  = vice champion
+excel.export.extrabet.thirdFinalWinner = 3rd Winner
+excel.export.extrabet.username         = Username
+excel.export.hint                      = Export of all results to Excel. After the final match all bets are included.
+excel.export.joker                     = Joker
+excel.export.no                        = no
+excel.export.points                    = Points
+excel.export.pointsCount               = Reached points count
+excel.export.resultTeam1               = Result Team 1
+excel.export.resultTeam2               = Result Team 2
+excel.export.team1                     = Team One
+excel.export.team2                     = Team Two
+excel.export.username                  = User Name
+excel.export.yes                       = yes
+excel.import.title                     = Import matches via Excel
+excel.upload.button                    = Upload file
+excel.upload.file                      = Upload Excel file
+excel.upload.msg.failed                = An error occured while importing the excel file. Cause: {0}
+excel.upload.msg.noExcelFile           = The uploaded file is not an excel file (.xlsx)!
+excel.upload.msg.noFileGiven           = Please choose excel file to upload!
+excel.upload.msg.saved                 = The Excel file was imported successfully!
 
 extra_bets.finalWinner      = champion
 extra_bets.points           = {0} points
