--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ administration.createRandomMatches                                       = Zufal
 administration.deleteAllBetsAndMatches                                   = Alle Tipps und Spiele l\u00F6schen
 administration.demoBetsAllUsers                                          = Testtipps f\u00FCr alle Benutzer anlegen
 administration.excel.export.allBets                                      = Alle Tipps
+administration.excel.export.extraBets                                    = Alle Bonus-Tipps
 administration.excel.export.pointsCount                                  = Auflistung Punkteh\u00E4ufigkeit
 administration.excel.export.title                                        = Excel Export
 administration.msg.backup.error.noInMemory                               = Backup von In-Memory Datenbanken werden nicht unterst\u00FCtzt. Bitte verwenden Sie eine H2 file-basierte Datenbank!
@@ -294,30 +295,37 @@ country.zam           = Zambia
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
-excel.download.hint.allMatchesDeleted = Achtung! Alle vorhandenen Spiele werden gel\u00F6scht!
-excel.download.template               = Excel-Vorlage
-excel.download.template.name          = Vorlagen
-excel.export.bet1                     = Tip Team 1
-excel.export.bet2                     = Tip Team 2
-excel.export.date                     = Datum
-excel.export.hint                     = Export aller Ergebnisse nach Excel. Nach Abschluss des Finales werden auch die Tipps mit angegeben.
-excel.export.joker                    = Joker
-excel.export.no                       = nein
-excel.export.points                   = Punkte
-excel.export.pointsCount              = H\u00E4ufigkeit Punktezahl
-excel.export.resultTeam1              = Ergebnis Team 1
-excel.export.resultTeam2              = Ergebnis Team 2
-excel.export.team1                    = Team 1
-excel.export.team2                    = Team 2
-excel.export.username                 = Benutzername
-excel.export.yes                      = ja
-excel.import.title                    = Excel-Datei mit Spielen importieren
-excel.upload.button                   = Datei hochladen
-excel.upload.file                     = Excel-Datei hochladen
-excel.upload.msg.failed               = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
-excel.upload.msg.noExcelFile          = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
-excel.upload.msg.noFileGiven          = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
-excel.upload.msg.saved                = Die Excel-Datei wurde erfolgreich importiert!
+excel.download.hint.allMatchesDeleted  = Achtung! Alle vorhandenen Spiele werden gel\u00F6scht!
+excel.download.template                = Excel-Vorlage
+excel.download.template.name           = Vorlagen
+excel.export.bet1                      = Tip Team 1
+excel.export.bet2                      = Tip Team 2
+excel.export.date                      = Datum
+excel.export.extrabet.finalWinner      = Meister
+excel.export.extrabet.pointsOne        = Punkte Meister
+excel.export.extrabet.pointsThree      = Punkte 3. Platz
+excel.export.extrabet.pointsTwo        = Punkte Vize-Meister
+excel.export.extrabet.semiFinalWinner  = Vize-Meister
+excel.export.extrabet.thirdFinalWinner = 3. Platz
+excel.export.extrabet.username         = Benutzername
+excel.export.hint                      = Export aller Ergebnisse nach Excel. Nach Abschluss des Finales werden auch die Tipps mit angegeben.
+excel.export.joker                     = Joker
+excel.export.no                        = nein
+excel.export.points                    = Punkte
+excel.export.pointsCount               = H\u00E4ufigkeit Punktezahl
+excel.export.resultTeam1               = Ergebnis Team 1
+excel.export.resultTeam2               = Ergebnis Team 2
+excel.export.team1                     = Team 1
+excel.export.team2                     = Team 2
+excel.export.username                  = Benutzername
+excel.export.yes                       = ja
+excel.import.title                     = Excel-Datei mit Spielen importieren
+excel.upload.button                    = Datei hochladen
+excel.upload.file                      = Excel-Datei hochladen
+excel.upload.msg.failed                = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
+excel.upload.msg.noExcelFile           = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
+excel.upload.msg.noFileGiven           = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
+excel.upload.msg.saved                 = Die Excel-Datei wurde erfolgreich importiert!
 
 extra_bets.finalWinner      = Meister
 extra_bets.points           = {0} Punkte
