--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,5 +1,5 @@
 
-active.users.title = Aktualnie zalogowani u\u00C5\u00BCytkownicy
+active.users.title = Aktualnie zalogowani u\u017Cytkownicy
 
 administration.backup.executeBackupButton                                = Stworzy\u0107 kopi\u0119 zapasow\u0105
 administration.backup.title                                              = Kopia zapasowa bazy danych
@@ -11,7 +11,7 @@ administration.config.title                                              = Konfi
 administration.createEmMatches                                           = create matches of EM 2016
 administration.createRandomMatches                                       = Wygeneruj losowe mecze
 administration.deleteAllBetsAndMatches                                   = Usu\u00C5\u0084 wszystkie typowania i mecze
-administration.demoBetsAllUsers                                          = Wygeneruj przyk\u00C5\u0082adowe typowania dla wszystkich u\u00C5\u00BCytkownik\u00C3\u00B3w
+administration.demoBetsAllUsers                                          = Wygeneruj przyk\u00C5\u0082adowe typowania dla wszystkich u\u017Cytkownik\u00F3w
 administration.excel.export.allBets                                      = Wszystkie typowania
 administration.excel.export.extraBets                                    = Wszystkie dodatkowe zak\u0142ady
 administration.excel.export.pointsCount                                  = Liczba zdobytych punkt\u00C3\u00B3w
@@ -485,7 +485,7 @@ navigation.user                  = U\u00C5\u00BCytkownik
 
 penalty.box.heading = Zwyci\u00C4\u0099zca w serii rzut\u00C3\u00B3w karnych
 
-pointsfrequency.noData            = Brak wynik\u00C3\u00B3w
+pointsfrequency.noData            = Brak wynik\u00F3w
 pointsfrequency.points            = Punkty
 pointsfrequency.table.header.name = Nazwa
 pointsfrequency.title             = Cz\u00C4\u0099sto\u00C5\u009B\u00C4\u0087 punkt\u00C3\u00B3w
