added confirmation dialog for deleting users and all matches

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -540,3 +540,6 @@ userprofile.changePassword.oldPassword       = altes Passwort
 userprofile.changePassword.title             = Passwort \u00E4ndern
 userprofile.changeUsername.newUsername       = Neuer Benutzername
 userprofile.changeUsername.title             = Benutzername \u00E4ndern
+confirmation.msg=Wirklich sicher?
+yes=ja
+no=nein
