--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -540,3 +540,6 @@ userprofile.changePassword.oldPassword       = old password
 userprofile.changePassword.title             = change password
 userprofile.changeUsername.newUsername       = New user name
 userprofile.changeUsername.title             = Change username
+confirmation.msg=Really sure?
+yes=yes
+no=no
