--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -540,3 +540,6 @@ userprofile.changePassword.oldPassword       = Stare has\u0142o
 userprofile.changePassword.title             = Zmie\u0144 has\u0142o
 userprofile.changeUsername.newUsername       = Nowa nazwa u\u017Cytkownika
 userprofile.changeUsername.title             = Zmie\u0144 nazw\u0119 u\u017Cytkownika
+confirmation.msg=Naprawd? na pewno?
+yes=tak
+no=nie
