added excel export for ranking

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -543,3 +543,6 @@ userprofile.changeUsername.title             = Benutzername \u00E4ndern
 confirmation.msg=Wirklich sicher?
 yes=ja
 no=nein
+excel.export.ranking.username=Name
+excel.export.ranking.points=Punkte
+administration.excel.export.ranking=Ranking
