--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -543,3 +543,6 @@ userprofile.changeUsername.title             = Change username
 confirmation.msg=Really sure?
 yes=yes
 no=no
+excel.export.ranking.username=Name
+excel.export.ranking.points=Points
+administration.excel.export.ranking=Ranking
