--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -543,3 +543,6 @@ userprofile.changeUsername.title             = Zmie\u0144 nazw\u0119 u\u017Cytko
 confirmation.msg=Naprawd? na pewno?
 yes=tak
 no=nie
+excel.export.ranking.username=Nazwa
+excel.export.ranking.points=Punktów
+administration.excel.export.ranking=Ranking
