bug fix - other users bets were visible before match start time + spelling "betable" corrected

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -457,6 +457,7 @@ msg.match.created                      = Match {0} vs. {1} created!
 msg.match.deleted                      = The match {0} vs {1} has been deleted!
 msg.match.notFound                     = Can\u00B4t find match with ID {0}!
 msg.match.updated                      = The match {0} vs {1} has been updated!
+msg.match.bettable                     = Match is still bettable, can't show other users bets!
 msg.negative.values.not.allowed        = Negative values are not allowed!
 msg.user.profile.info.passwordChanged  = Password changed successfully!
 msg.user.profile.info.usernameChanged  = Username was changed sucessfully!
