--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -457,6 +457,7 @@ msg.match.created                      = Mecz {0} vs. {1} stworzony!
 msg.match.deleted                      = Mecz {0} vs. {1} skasowany!
 msg.match.notFound                     = Nie mo\u017Cna znale\u017A\u0107 meczu o ID {0}!
 msg.match.updated                      = Mecz {0} vs. {1} zaktualizowany!
+msg.match.bettable                     = Mecz mo\u017Cna dalej typowa\u0107, typowania innych nie s\u0105 jeszcze dost\u0119pne!
 msg.negative.values.not.allowed        = Ujemne warto\u015Bci nie s\u0105 dozwolone!
 msg.user.profile.info.passwordChanged  = Zmieniono has\u0142o
 msg.user.profile.info.usernameChanged  = Zmieniono nazw\u0119 u\u017Cytkownika
