--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -62,13 +62,13 @@ backup.backupFolder = Backup Verzeichnis
 
 bet.edit.heading         = Tipp abgeben
 bet.edit.title           = Spieltipp
-bet.extra.others.title   = Bonus-Tipps der anderen...
+bet.extra.others.title   = Bonus-Tipps der Anderen...
 bet.list.betted          = getippt
 bet.list.points          = Punkte
 bet.list.title           = Meine Spieletipps
 bet.listOpen.title       = Noch nicht getippt
 bet.others.joker.tooltip = Tipp mit Joker
-bet.others.title         = Tipps der anderen...
+bet.others.title         = Tipps der Anderen...
 
 betting.joker           = Joker verwenden
 betting.joker.available = Du hast bereits {0} von {1} Jokern verwendet.
@@ -457,6 +457,7 @@ msg.match.created                      = Spiel {0} gegen {1} angelegt!
 msg.match.deleted                      = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
 msg.match.notFound                     = Das Match mit der ID {0} kann nicht gefunden werden!
 msg.match.updated                      = Spiel {0} gegen {1} aktualisiert!
+msg.match.bettable=Tipps der Anderen werden erst nach Spielbeginn angezeigt!
 msg.negative.values.not.allowed        = Negative Werte sind nicht erlaubt!
 msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
 msg.user.profile.info.usernameChanged  = Der Benutzername wurde erfolgreich ge\u00E4ndert!
