added navigation entry for matches of today

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -547,3 +547,4 @@ no=nein
 excel.export.ranking.username=Name
 excel.export.ranking.points=Punkte
 administration.excel.export.ranking=Ranking
+today.matches=heutige Spiele
