--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -547,3 +547,4 @@ no=nie
 excel.export.ranking.username=Nazwa
 excel.export.ranking.points=Punktów
 administration.excel.export.ranking=Ranking
+today.matches=dzisiejsze gry
