--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -479,7 +479,7 @@ navigation.info                  = Infos
 navigation.lastlogin             = Letzte Logins
 navigation.logout                = Abmelden
 navigation.profileImage          = Profilfoto \u00E4ndern
-navigation.ranking               = Ranking
+navigation.ranking=Platzierung
 navigation.runtime.configuration = Laufzeit-Konfiguration
 navigation.systemInfo            = Systeminformationen
 navigation.user                  = Benutzer
