--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -547,4 +547,4 @@ no=no
 excel.export.ranking.username=Name
 excel.export.ranking.points=Points
 administration.excel.export.ranking=Ranking
-today.matches=Today´s matches
+today.matches=Today\u00B4s matches
