added group bet info

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -548,3 +548,4 @@ excel.export.ranking.username=Name
 excel.export.ranking.points=Punkte
 administration.excel.export.ranking=Ranking
 today.matches=heutige Spiele
+others.bet.groupBet=Gruppentipp
