--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -548,3 +548,4 @@ excel.export.ranking.username=Name
 excel.export.ranking.points=Points
 administration.excel.export.ranking=Ranking
 today.matches=Today\u00B4s matches
+others.bet.groupBet=Group Bet
