--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -545,6 +545,7 @@ confirmation.msg=Naprawd? na pewno?
 yes=tak
 no=nie
 excel.export.ranking.username=Nazwa
-excel.export.ranking.points=Punktów
+excel.export.ranking.points=Punkt\uFFFDw
 administration.excel.export.ranking=Ranking
 today.matches=dzisiejsze gry
+others.bet.groupBet=Grupa Typowania
