corrected polish translation

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -547,5 +547,5 @@ no=nie
 excel.export.ranking.username=Nazwa
 excel.export.ranking.points=Punkt\uFFFDw
 administration.excel.export.ranking=Ranking
-today.matches=dzisiejsze gry
+today.matches=Dzisiejsze mecze
 others.bet.groupBet=Grupa Typowania
