--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -549,3 +549,4 @@ excel.export.ranking.points=Punkt\uFFFDw
 administration.excel.export.ranking=Ranking
 today.matches=Dzisiejsze mecze
 others.bet.groupBet=Grupa Typowania
+ranking.goalDifference.title=R\u00F3\u017Cnica goli: {0}
