--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -549,3 +549,4 @@ excel.export.ranking.points=Points
 administration.excel.export.ranking=Ranking
 today.matches=Today\u00B4s matches
 others.bet.groupBet=Group Bet
+ranking.goalDifference.title=Goal Difference: {0}
