sort ranking based on points, correct bet results and goal difference

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -549,4 +549,4 @@ excel.export.ranking.points=Punkte
 administration.excel.export.ranking=Ranking
 today.matches=heutige Spiele
 others.bet.groupBet=Gruppentipp
-ranking.goalDifference.title=Tordifferenz: {0}
+ranking.details.title=richtige Ergebnisse: {0}, Tordifferenz: {1}
