--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -549,4 +549,4 @@ excel.export.ranking.points=Punkt\uFFFDw
 administration.excel.export.ranking=Ranking
 today.matches=Dzisiejsze mecze
 others.bet.groupBet=Grupa Typowania
-ranking.goalDifference.title=R\u00F3\u017Cnica goli: {0}
+ranking.details.title=Prawid\u0142owe zak\u0142ady: {0}, R\u00F3\u017Cnica goli: {1}
