toggle button for details

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -550,3 +550,4 @@ administration.excel.export.ranking=Ranking
 today.matches=heutige Spiele
 others.bet.groupBet=Gruppentipp
 ranking.details.title=richtige Ergebnisse: {0}, Tordifferenz: {1}
+ranking.show.details.button=Details ein-/ausblenden
