--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -550,3 +550,4 @@ administration.excel.export.ranking=Ranking
 today.matches=Today\u00B4s matches
 others.bet.groupBet=Group Bet
 ranking.details.title=Correct Result Bets: {0}, Goal Difference: {1}
+ranking.show.details.button=Toggle Details
