refactoring; bugfix change username of admin

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -551,3 +551,4 @@ today.matches=Today\u00B4s matches
 others.bet.groupBet=Group Bet
 ranking.details.title=Correct Result Bets: {0}, Goal Difference: {1}
 ranking.show.details.button=Toggle Details
+user.username.changeNotAllowed=This username is not changeable!
