--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -551,3 +551,4 @@ today.matches=heutige Spiele
 others.bet.groupBet=Gruppentipp
 ranking.details.title=richtige Ergebnisse: {0}, Tordifferenz: {1}
 ranking.show.details.button=Details ein-/ausblenden
+user.username.changeNotAllowed=Dieser Benutzername kann nicht ge\u00E4ndert werden!
