--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -551,3 +551,4 @@ today.matches=Dzisiejsze mecze
 others.bet.groupBet=Grupa Typowania
 ranking.details.title=Prawid\u0142owe zak\u0142ady: {0}, R\u00F3\u017Cnica goli: {1}
 ranking.show.details.button=Poka\u017C / ukryj szczeg\u00F3\u0142y
+user.username.changeNotAllowed=Ta nazwa u\u017Cytkownika nie jest mo\u017Cliwa do zmiany!
