change password after password reset

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -508,8 +508,7 @@ statistics.title                   = Punkte-Statistik
 systeminfo.title = Systeminformationen
 
 upcoming.matches = anstehende Spiele
-
-user.changePassword.firstLogin               = Sie melden sich das erste mal an. \u00C4ndern Sie daher ihr Passwort!
+user.changePassword.firstLogin=Sie melden sich das erste mal an oder Ihr Passwort wurde zur\u00FCckgesetzt. \u00C4ndern Sie daher ihr Passwort!
 user.create.child                            = Kind
 user.create.password                         = Passwort
 user.create.roles                            = Rolle
