--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -508,8 +508,7 @@ statistics.title                   = points statistic
 systeminfo.title = System Info
 
 upcoming.matches = Upcoming Matches
-
-user.changePassword.firstLogin               = This is your first login. Please change your password first!
+user.changePassword.firstLogin=This is your first login or your password has been reset. Please change your password first!
 user.create.child                            = Child
 user.create.password                         = password
 user.create.roles                            = Role
