--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -508,8 +508,7 @@ statistics.title                   = Statystyki punkt\u00F3w
 systeminfo.title = System Info
 
 upcoming.matches = Nadchodz\u0105ce mecze
-
-user.changePassword.firstLogin               = To Twoje pierwsze logowanie, prosz\u0119 zmie\u0144 has\u0142o
+user.changePassword.firstLogin=To jest tw\u00F3j pierwszy login lub twoje has\u0142o zosta\u0142o zresetowane. Najpierw zmie\u0144 has\u0142o!
 user.create.child                            = Dziecko
 user.create.password                         = has\u0142o
 user.create.roles                            = Rola
