added menu entry for finished matches with missing result

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -551,3 +551,4 @@ others.bet.groupBet=Gruppentipp
 ranking.details.title=richtige Ergebnisse: {0}, Tordifferenz: {1}
 ranking.show.details.button=Details ein-/ausblenden
 user.username.changeNotAllowed=Dieser Benutzername kann nicht ge\u00E4ndert werden!
+finishednoresult.matches=beendete Spiele mit fehlendem Ergebnis
