--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -551,3 +551,4 @@ ranking.details.title=Prawid\u0142owe zak\u0142ady: {0}, R\u00F3\u017Cnica goli:
 ranking.show.details.button=Poka\u017C / ukryj szczeg\u00F3\u0142y
 user.username.changeNotAllowed=Ta nazwa u\u017Cytkownika nie jest mo\u017Cliwa do zmiany!
 finishednoresult.matches=uko\u0144czone mecze bez wyniku
+ranking.button.pdf.export=PDF-Export
