update pdf creation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -552,3 +552,7 @@ ranking.show.details.button=Toggle Details
 user.username.changeNotAllowed=This username is not changeable!
 finishednoresult.matches=finished matches without result
 ranking.button.pdf.export=PDF-Export
+pdf.export.username=username
+pdf.export.correctResult=correct results
+pdf.export.goalDifference=goal difference
+pdf.export.totalPoints=total points
