--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -552,3 +552,7 @@ ranking.show.details.button=Details ein-/ausblenden
 user.username.changeNotAllowed=Dieser Benutzername kann nicht ge\u00E4ndert werden!
 finishednoresult.matches=beendete Spiele mit fehlendem Ergebnis
 ranking.button.pdf.export=PDF-Export
+pdf.export.username=Benutzername
+pdf.export.correctResult=richtige Ergebnisse
+pdf.export.goalDifference=Tordifferenz
+pdf.export.totalPoints=Gesamtpunkte
