--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -552,3 +552,7 @@ ranking.show.details.button=Poka\u017C / ukryj szczeg\u00F3\u0142y
 user.username.changeNotAllowed=Ta nazwa u\u017Cytkownika nie jest mo\u017Cliwa do zmiany!
 finishednoresult.matches=uko\u0144czone mecze bez wyniku
 ranking.button.pdf.export=PDF-Export
+pdf.export.username=Nazwa U?ytkownika
+pdf.export.correctResult=poprawne wyniki
+pdf.export.goalDifference=ró?nica bramek
+pdf.export.totalPoints=Suma punktów
