--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -552,6 +552,6 @@ user.username.changeNotAllowed=Ta nazwa u\u017Cytkownika nie jest mo\u017Cliwa d
 finishednoresult.matches=uko\u0144czone mecze bez wyniku
 ranking.button.pdf.export=PDF-Export
 pdf.export.username=Nazwa U?ytkownika
-pdf.export.correctResult=poprawne wyniki
-pdf.export.goalDifference=ró?nica bramek
+pdf.export.correctResult=Prawid?owe zak?ady
+pdf.export.goalDifference=Ró?nica goli
 pdf.export.totalPoints=Suma punktów
