update pdf export

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -555,3 +555,4 @@ pdf.export.username=Benutzername
 pdf.export.correctResult=richtige Ergebnisse
 pdf.export.goalDifference=Tordifferenz
 pdf.export.totalPoints=Gesamtpunkte
+pdf.export.button=PDF-Export
