--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -555,3 +555,4 @@ pdf.export.username=username
 pdf.export.correctResult=correct results
 pdf.export.goalDifference=goal difference
 pdf.export.totalPoints=total points
+pdf.export.button=PDF export
