--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -555,3 +555,4 @@ pdf.export.username=Nazwa U?ytkownika
 pdf.export.correctResult=Prawid?owe zak?ady
 pdf.export.goalDifference=Ró?nica goli
 pdf.export.totalPoints=Suma punktów
+pdf.export.button=eksport PDF
