cleanup; added page number to pdf

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -556,3 +556,4 @@ pdf.export.correctResult=richtige Ergebnisse
 pdf.export.goalDifference=Tordifferenz
 pdf.export.totalPoints=Gesamtpunkte
 pdf.export.button=PDF-Export
+page=Seite
