--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -556,3 +556,4 @@ pdf.export.correctResult=Prawid?owe zak?ady
 pdf.export.goalDifference=Ró?nica goli
 pdf.export.totalPoints=Suma punktów
 pdf.export.button=eksport PDF
+page=Strona
