--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -556,3 +556,4 @@ pdf.export.correctResult=correct results
 pdf.export.goalDifference=goal difference
 pdf.export.totalPoints=total points
 pdf.export.button=PDF export
+page=Page
