added self registration process

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -557,3 +557,6 @@ pdf.export.goalDifference=Tordifferenz
 pdf.export.totalPoints=Gesamtpunkte
 pdf.export.button=PDF-Export
 page=Seite
+registration.title=Benutzerregistrierung
+registration.link.text=Noch nicht registriert? Hier können Sie sich registrieren.
+registration.token=Registrierungs-ID
