--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -557,3 +557,5 @@ pdf.export.goalDifference=goal difference
 pdf.export.totalPoints=total points
 pdf.export.button=PDF export
 page=Page
+registration.title=User Registration
+registration.token=Register Token
