--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -558,4 +558,7 @@ pdf.export.totalPoints=total points
 pdf.export.button=PDF export
 page=Page
 registration.title=User Registration
-registration.token=Register Token
+registration.link.text=Register
+registration.token=Registration Code
+registration.username=Username
+registration.text=If you have a registration code you can register here:
