--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -562,3 +562,7 @@ registration.link.text=Registrierung
 registration.token=Registrierungs-Code
 registration.username=Benutzername
 registration.text=Hast du einen Registrierungs-Code? Dann kannst du dich hier registrieren:
+administration.runtime.configuration.registrationCode=Selbstregistrierung
+administration.runtime.configuration.registrationCode.title=Registrierungs-Code
+administration.runtime.configuration.selfRegistrationEnabled=Selbstregistrierung aktivieren
+administration.runtime.configuration.selfRegistrationEnabled.tooltip=Mit der Selbstregistrierung können sich Benutzer selbst anlegen.
