--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -565,4 +565,7 @@ registration.text=Hast du einen Registrierungs-Code? Dann kannst du dich hier re
 administration.runtime.configuration.registrationCode=Selbstregistrierung
 administration.runtime.configuration.registrationCode.title=Registrierungs-Code
 administration.runtime.configuration.selfRegistrationEnabled=Selbstregistrierung aktivieren
-administration.runtime.configuration.selfRegistrationEnabled.tooltip=Mit der Selbstregistrierung können sich Benutzer selbst anlegen.
+administration.runtime.configuration.selfRegistrationEnabled.tooltip=Mit der Selbstregistrierung haben Benutzer die Möglichkeit selbst einen Account anzulegen.
+msg.registration.error.invalidToken=Der eingegebene Registrierungs-Code ist ungültig!
+back.to.login=Zurück zum Login
+msg.registration.info.success=Die Registrierung war erfolgreich. Sie können sich nun anmelden.
