--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -558,7 +558,7 @@ pdf.export.totalPoints=Gesamtpunkte
 pdf.export.button=PDF-Export
 page=Seite
 registration.title=Benutzerregistrierung
-registration.link.text=Registrierung
+registration.link.text=Zur Registrierung
 registration.token=Registrierungs-Code
 registration.username=Benutzername
 registration.text=Hast du einen Registrierungs-Code? Dann kannst du dich hier registrieren:
