--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -558,7 +558,14 @@ pdf.export.totalPoints=total points
 pdf.export.button=PDF export
 page=Page
 registration.title=User Registration
-registration.link.text=Register
+registration.link.text=Registration
 registration.token=Registration Code
 registration.username=Username
-registration.text=If you have a registration code you can register here:
+registration.text=Do you have a registration code? Then register here:
+administration.runtime.configuration.registrationCode=Self Registration
+administration.runtime.configuration.registrationCode.title=Registration Code
+administration.runtime.configuration.selfRegistrationEnabled=Activate self registration
+administration.runtime.configuration.selfRegistrationEnabled.tooltip=The self registration enables users to create a user account for themselfs.
+msg.registration.error.invalidToken=The entered registration code is invalid!
+back.to.login=back to login
+msg.registration.info.success=Registration successful. Please login.
